# mark-oxide

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  parser.rs  state.rs  unicode.rs
src/parser/: action.rs  character.rs  character_parser.rs  document.rs  effect.rs  line_ending.rs  state.rs  transition.rs
src/parser/character_parser/: carriage_return.rs  carriage_return_state.rs  character_transition.rs  character_transition_result.rs  default.rs  default_state.rs  potential_character_reference.rs  potential_escape.rs  potential_escape_state.rs
src/parser/document/: block.rs  leaf.rs
src/parser/state/: atx_heading.rs  default.rs  fenced_code_block.rs  handler.rs  indented_code_block.rs  line_ending.rs  potential.rs  potential_escape.rs  setext_heading.rs  sub_state.rs  thematic_break.rs
src/parser/state/sub_state/: atx_heading.rs  fenced_code_block.rs  indented_code_block.rs  stx_heading.rs  thematic_break.rs
src/parser/state/sub_state/atx_heading/: closing.rs  content.rs  leading.rs  opening.rs  trailing.rs
src/parser/state/sub_state/fenced_code_block/: closing.rs  content.rs  info.rs  newline.rs  opening.rs  opening_trail.rs
src/parser/state/sub_state/indented_code_block/: blank.rs  content.rs  newline.rs
src/parser/state/sub_state/stx_heading/: content.rs  (+3 more)
src/state/: atx_heading.rs  default.rs  line_ending.rs  potential.rs  potential_escape.rs  thematic_break.rs
test_diff/: Cargo.toml
test_diff/src/: bitmap.rs  error.rs  main.rs  utils.rs
test_generator/: Cargo.toml
test_generator/src/: error.rs  main.rs  utils.rs
