[package]
name = "test_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
mark-oxide.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4" , features = ["blocking"]}